Add firebase notification

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,13 @@
      "moduleResolution": "node",
      "noEmit": true,
      "strict": true,
-     "target": "esnext"
+     "target": "esnext",
     },
     "exclude": [
      "node_modules",
      "babel.config.js",
      "metro.config.js",
      "jest.config.js"
-    ]
+    ],
+    "include": ["./typings/react-native-stopwatch-timer.d.ts"]
     }
