--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.2.0",
+    "@react-native-firebase/messaging": "^12.2.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "agora-rn-uikit": "^3.3.0",
@@ -18,6 +20,7 @@
     "react-native": "0.63.3",
     "react-native-agora": "^3.1.3",
     "react-native-background-timer": "^2.4.1",
+    "react-native-callkeep": "^4.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
