--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-stopwatch-timer": "^0.0.21",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-voip-call": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.8",
