--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "agora-rn-uikit": "^3.3.0",
+    "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-agora": "^3.1.3",
