--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.2.0",
     "@react-native-firebase/messaging": "^12.2.0",
+    "@react-native-picker/picker": "^1.16.3",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "agora-rn-uikit": "^3.3.0",
