--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.2.0",
+    "@react-native-firebase/firestore": "^12.7.2",
     "@react-native-firebase/messaging": "^12.2.0",
     "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/native": "^5.9.4",
@@ -25,7 +26,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-callkeep": "^4.2.0",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-stopwatch-timer": "^0.0.21",
