--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-callkeep": "^4.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-stopwatch-timer": "^0.0.21",
