--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-agora": "^3.1.3",
     "react-native-background-timer": "^2.4.1",
     "react-native-callkeep": "^4.2.0",
+    "react-native-contacts": "^7.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
